add openapi artifacts
