# pkg/api/openapi/api/openapi.yaml
@@ -98,25 +98,25 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/DinosaurList'
+                $ref: "#/components/schemas/DinosaurList"
           description: A JSON array of dinosaur objects
         "401":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
           description: Auth token is invalid
         "403":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
           description: Unauthorized to perform operation
         "500":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
           description: Unexpected error occurred
       security:
       - Bearer: []
@@ -126,7 +126,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Dinosaur'
+              $ref: "#/components/schemas/Dinosaur"
         description: Dinosaur data
         required: true
       responses:
@@ -134,37 +134,37 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Dinosaur'
+                $ref: "#/components/schemas/Dinosaur"
           description: Created
         "400":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
           description: Validation errors occurred
         "401":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
           description: Auth token is invalid
         "403":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
           description: Unauthorized to perform operation
         "409":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
           description: Dinosaur already exists
         "500":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
           description: An unexpected error occurred creating the dinosaur
       security:
       - Bearer: []
@@ -173,65 +173,62 @@ paths:
     get:
       parameters:
       - description: The id of record
+        explode: false
         in: path
         name: id
         required: true
         schema:
           type: string
+        style: simple
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Dinosaur'
+                $ref: "#/components/schemas/Dinosaur"
           description: Dinosaur found by id
         "401":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
           description: Auth token is invalid
         "403":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
           description: Unauthorized to perform operation
         "404":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
           description: No dinosaur with specified id exists
         "500":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
           description: Unexpected error occurred
       security:
       - Bearer: []
       summary: Get an dinosaur by id
-    parameters:
-    - description: The id of record
-      in: path
-      name: id
-      required: true
-      schema:
-        type: string
     patch:
       parameters:
       - description: The id of record
+        explode: false
         in: path
         name: id
         required: true
         schema:
           type: string
+        style: simple
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/DinosaurPatchRequest'
+              $ref: "#/components/schemas/DinosaurPatchRequest"
         description: Updated dinosaur data
         required: true
       responses:
@@ -239,43 +236,43 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Dinosaur'
+                $ref: "#/components/schemas/Dinosaur"
           description: Dinosaur updated successfully
         "400":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
           description: Validation errors occurred
         "401":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
           description: Auth token is invalid
         "403":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
           description: Unauthorized to perform operation
         "404":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
           description: No dinosaur with specified id exists
         "409":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
           description: Dinosaur already exists
         "500":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
           description: Unexpected error updating dinosaur
       security:
       - Bearer: []
@@ -409,20 +406,80 @@ components:
       type: object
     Error:
       allOf:
-      - $ref: '#/components/schemas/ObjectReference'
-      - $ref: '#/components/schemas/Error_allOf'
+      - $ref: "#/components/schemas/ObjectReference"
+      - properties:
+          code:
+            type: string
+          reason:
+            type: string
+          operation_id:
+            type: string
+        type: object
+      example:
+        reason: reason
+        code: code
+        updated_at: 2000-01-23T04:56:07.000+00:00
+        kind: kind
+        created_at: 2000-01-23T04:56:07.000+00:00
+        operation_id: operation_id
+        id: id
+        href: href
     ErrorList:
       allOf:
-      - $ref: '#/components/schemas/List'
-      - $ref: '#/components/schemas/ErrorList_allOf'
+      - $ref: "#/components/schemas/List"
+      - properties:
+          items:
+            items:
+              $ref: "#/components/schemas/Error"
+            type: array
+        type: object
     Dinosaur:
       allOf:
-      - $ref: '#/components/schemas/ObjectReference'
-      - $ref: '#/components/schemas/Dinosaur_allOf'
+      - $ref: "#/components/schemas/ObjectReference"
+      - properties:
+          species:
+            type: string
+          created_at:
+            format: date-time
+            type: string
+          updated_at:
+            format: date-time
+            type: string
+        type: object
+      example:
+        updated_at: 2000-01-23T04:56:07.000+00:00
+        species: species
+        kind: kind
+        created_at: 2000-01-23T04:56:07.000+00:00
+        id: id
+        href: href
     DinosaurList:
       allOf:
-      - $ref: '#/components/schemas/List'
-      - $ref: '#/components/schemas/DinosaurList_allOf'
+      - $ref: "#/components/schemas/List"
+      - properties:
+          items:
+            items:
+              $ref: "#/components/schemas/Dinosaur"
+            type: array
+        type: object
+      example:
+        total: 1
+        size: 6
+        kind: kind
+        page: 0
+        items:
+        - updated_at: 2000-01-23T04:56:07.000+00:00
+          species: species
+          kind: kind
+          created_at: 2000-01-23T04:56:07.000+00:00
+          id: id
+          href: href
+        - updated_at: 2000-01-23T04:56:07.000+00:00
+          species: species
+          kind: kind
+          created_at: 2000-01-23T04:56:07.000+00:00
+          id: id
+          href: href
     DinosaurPatchRequest:
       example:
         species: species
@@ -430,44 +487,6 @@ components:
         species:
           type: string
       type: object
-    Error_allOf:
-      properties:
-        code:
-          type: string
-        reason:
-          type: string
-        operation_id:
-          type: string
-      type: object
-      example: null
-    ErrorList_allOf:
-      properties:
-        items:
-          items:
-            $ref: '#/components/schemas/Error'
-          type: array
-      type: object
-      example: null
-    Dinosaur_allOf:
-      properties:
-        species:
-          type: string
-        created_at:
-          format: date-time
-          type: string
-        updated_at:
-          format: date-time
-          type: string
-      type: object
-      example: null
-    DinosaurList_allOf:
-      properties:
-        items:
-          items:
-            $ref: '#/components/schemas/Dinosaur'
-          type: array
-      type: object
-      example: null
   securitySchemes:
     Bearer:
       bearerFormat: JWT
