# pkg/api/openapi/model_dinosaur_list_all_of.go
@@ -1,124 +1,0 @@
-/*
-rh-trex Service API
-
-rh-trex Service API
-
-API version: 0.0.1
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package openapi
-
-import (
-	"encoding/json"
-)
-
-// checks if the DinosaurListAllOf type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &DinosaurListAllOf{}
-
-// DinosaurListAllOf struct for DinosaurListAllOf
-type DinosaurListAllOf struct {
-	Items []Dinosaur `json:"items,omitempty"`
-}
-
-// NewDinosaurListAllOf instantiates a new DinosaurListAllOf object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewDinosaurListAllOf() *DinosaurListAllOf {
-	this := DinosaurListAllOf{}
-	return &this
-}
-
-// NewDinosaurListAllOfWithDefaults instantiates a new DinosaurListAllOf object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewDinosaurListAllOfWithDefaults() *DinosaurListAllOf {
-	this := DinosaurListAllOf{}
-	return &this
-}
-
-// GetItems returns the Items field value if set, zero value otherwise.
-func (o *DinosaurListAllOf) GetItems() []Dinosaur {
-	if o == nil || IsNil(o.Items) {
-		var ret []Dinosaur
-		return ret
-	}
-	return o.Items
-}
-
-// GetItemsOk returns a tuple with the Items field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *DinosaurListAllOf) GetItemsOk() ([]Dinosaur, bool) {
-	if o == nil || IsNil(o.Items) {
-		return nil, false
-	}
-	return o.Items, true
-}
-
-// HasItems returns a boolean if a field has been set.
-func (o *DinosaurListAllOf) HasItems() bool {
-	if o != nil && !IsNil(o.Items) {
-		return true
-	}
-
-	return false
-}
-
-// SetItems gets a reference to the given []Dinosaur and assigns it to the Items field.
-func (o *DinosaurListAllOf) SetItems(v []Dinosaur) {
-	o.Items = v
-}
-
-func (o DinosaurListAllOf) MarshalJSON() ([]byte, error) {
-	toSerialize, err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o DinosaurListAllOf) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	if !IsNil(o.Items) {
-		toSerialize["items"] = o.Items
-	}
-	return toSerialize, nil
-}
-
-type NullableDinosaurListAllOf struct {
-	value *DinosaurListAllOf
-	isSet bool
-}
-
-func (v NullableDinosaurListAllOf) Get() *DinosaurListAllOf {
-	return v.value
-}
-
-func (v *NullableDinosaurListAllOf) Set(val *DinosaurListAllOf) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableDinosaurListAllOf) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableDinosaurListAllOf) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableDinosaurListAllOf(val *DinosaurListAllOf) *NullableDinosaurListAllOf {
-	return &NullableDinosaurListAllOf{value: val, isSet: true}
-}
-
-func (v NullableDinosaurListAllOf) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableDinosaurListAllOf) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
